# tzod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  license.txt
Android/app/: CMakeLists.txt  build.gradle  tzod-test.jks
engine/: CMakeLists.txt
engine/cbind/: CMakeLists.txt  ConfigBinding.cpp
engine/config/: CMakeLists.txt  ConfigBase.cpp  ConfigCache.cpp
engine/fs/: CMakeLists.txt  FileSystem.cpp  StreamWrapper.cpp
engine/fsjni/: CMakeLists.txt
engine/fsmem/: CMakeLists.txt  FileSystemMemory.cpp
engine/fsposix/: CMakeLists.txt  FileSystemPosix.cpp
engine/fswin/: CMakeLists.txt  FileSystemWin32.cpp
engine/luaetc/: CMakeLists.txt
engine/math/: CMakeLists.txt
engine/plat/: CMakeLists.txt
engine/platetc/: CMakeLists.txt  UIInputRenderingController.cpp
engine/platglfw/: CMakeLists.txt  GlfwAppWindow.cpp  GlfwKeys.gen  GlfwPlatform.cpp  PlatFoldersStub.cpp  PlatFoldersWin.cpp  Timer.cpp
engine/platjni/: CMakeLists.txt  JniAppWindow.cpp  JniInput.cpp
engine/ui/: Button.cpp  CMakeLists.txt  Combo.cpp  Console.cpp  Dialog.cpp  Edit.cpp  EditableText.cpp  GuiManager.cpp  InputContext.cpp  LayoutContext.cpp  List.cpp  ListBase.cpp  Navigation.cpp  Rating.cpp  Rectangle.cpp  ScanlineLayout.cpp  StackLayout.cpp  Text.cpp  Window.cpp
engine/ui_tests/: CMakeLists.txt  ScrollView_tests.cpp  StackLayout_tests.cpp
engine/uitestapp/: CMakeLists.txt  UITestDesktop.cpp  UITestMain.cpp
engine/video/: AtlasPacker.cpp  CMakeLists.txt  EditableImage.cpp  GLESProgram.cpp  GLESProgram.h  RenderBinding.cpp  RenderContext.cpp  RenderD3D11.cpp  RenderD3D12.cpp  RenderGLES2.cpp  RenderOpenGL.cpp  SwapChainResources.cpp  TextureManager.cpp  TexturePackage.cpp  TgaImage.cpp
engine/video_tests/: CMakeLists.txt  RingAllocator_tests.cpp
engine/wavfile/: CMakeLists.txt
game/: CMakeLists.txt  History.txt  Readme.txt  bugs.txt  build.txt  license.txt  lua.vcproj  lua.vcxproj  lua.vcxproj.filters  oggvorbis.vcproj  oggvorbis.vcxproj  oggvorbis.vcxproj.filters  tank.vcproj  tank.vcxproj  tank.vcxproj.filters  todo.txt  zlib.vcproj  zlib.vcxproj  zlib.vcxproj.filters  zod-project.sln
game/Android/: build.gradle
game/Android/app/: CMakeLists.txt  build.gradle
game/WinRT/: CMakeLists.txt  bootstrap.cmd  device.cmd  simulator64.cmd  wtzod.sln
game/WinRT/data/: CMakeLists.txt
game/WinRT/wtzod/: App.cpp  App.h  DeviceResources.cpp  DeviceResources.h  DirectXHelper.h  DisplayOrientation.h  FrameworkView.cpp  FrameworkView.h  Package.appxmanifest  StoreAppClipboard.cpp  StoreAppClipboard.h  StoreAppInput.cpp  StoreAppInput.h  StoreAppWindow.cpp  StoreAppWindow.h  SwapChainResources.cpp  SwapChainResources.h  WinStoreKeys.cpp  WinStoreKeys.gen  WinStoreKeys.h  main.cpp  pch.h  wtzod.vcxproj  wtzod.vcxproj.filters  wtzodMain.cpp  wtzodMain.h  wtzod_TemporaryKey.pfx
game/ai/: CMakeLists.txt  DrivingAgent.cpp  DrivingAgent.h  ShootingAgent.cpp  ShootingAgent.h
game/app/: CMakeLists.txt  CombinedConfig.h  TzodViewImpl.cpp  TzodViewImpl.h  View.cpp  tzod.cpp
game/as/: AppController.cpp  AppState.cpp  CMakeLists.txt  MapCollection.cpp
game/audio/: CMakeLists.txt  OggVorbis.cpp  SoundTemplates.h  SoundView.cpp
game/ctx/: CMakeLists.txt  Deathmatch.cpp  EditorContext.cpp  GameContext.cpp
game/data/: dmcampaign.cfg  lang.cfg
game/data/campaign/: Demo.lua  TheRace.lua  test.lua
game/data/maps/: CS_Dust.map  DM-RUINS.map  blockend.map  dm3.map  dm5.map
game/data/scripts/: editor.lua  func.lua  init.lua  textures.lua  vehicles.lua  weapons.lua
game/data/skins/: neutral.tga  yellow.tga
game/data/sprites/: booster.tga  brick_lt.tga  concrete_rt.tga  concrete_wall1.tga  concrete_wall2.tga  cursor.tga  dotted_line.lua  editor_trigger.tga  explosion_e.lua  explosion_o.tga  explosion_plazma.lua  explosion_s.tga  font_default.lua  grid.lua  gui_logos.tga  gui_splash.tga  indicator_ammo.tga  indicator_fuel.lua  indicator_fuel.tga  indicator_health.tga  lightning.tga  particle_1.lua  particle_1.tga  particle_2.tga  particle_3.tga  particle_fire2.tga  particle_fire3.lua  particle_fire4.lua  particle_fire4.tga  particle_gausshit.tga  (+31 more)
game/editor/: CMakeLists.txt  DefaultCamera.cpp  EditorMain.cpp  EditorWorldView.cpp  GameClassVis.cpp  GameClassVis.h  MapSettings.cpp  PropertyList.cpp  PropertyList.h
game/gc/: CMakeLists.txt  Crate.cpp  Field.cpp  Particles.cpp  Pickup.cpp  Projectiles.cpp  RigidBody.cpp  RigidBodyDynamic.cpp  Rotator.cpp  SpawnPoint.cpp  Trigger.cpp  TypeReg.h  TypeSystem.cpp  UserObjects.cpp  Vehicle.cpp  Wall.cpp  World.cpp
game/gc_tests/: CMakeLists.txt
game/gclua/: CMakeLists.txt
game/gv/: CMakeLists.txt  GameViewHarness.cpp  ThemeManager.cpp
game/iOS/: bootstrap.sh
game/loc/: CMakeLists.txt
game/make/: aoTuV_b5.7_En.txt  lua.vcproj  lua.vcproj.vspscc  oggvorbis.vcproj  oggvorbis.vcproj.vspscc  package.pl  sound.pl  tank.vcproj  zlib.vcproj
game/mf/: CMakeLists.txt
game/render/: CMakeLists.txt  ObjectViewsSelector.cpp  RenderScheme.cpp  Terrain.cpp  WorldView.cpp  rAnimatedSprite.cpp  rAnimatedSprite.h  rBrickFragment.cpp  rBrickFragment.h  rDecoration.h  rParticle.cpp  rShock.cpp  rTile.h  rTurret.cpp  rVehicle.cpp  rWall.h  rWeaponBase.h
game/script/: CMakeLists.txt  ScriptHarness.cpp  sPlayer.cpp  sRigidBodyStatic.cpp
game/shell/: BotView.cpp  BotView.h  CMakeLists.txt  CampaignControlCommands.h  Config.cpp  ConfigConsoleHistory.cpp  ConfigWidgets.cpp  ConfigWidgets.h  Desktop.cpp  Game.cpp  Game.h  GamePauseMenu.cpp  GamePauseMenu.h  GetFileName.cpp  GetFileName.h  MainMenu.h  MapCollection.cpp  MapPreview.cpp  MapPreview.h  MessageArea.cpp  MessageArea.h  NavStack.cpp  NavStack.h  PlayerView.cpp  PlayerView.h  ScoreTable.cpp  ScoreTable.h  SelectMapDlg.cpp  SelectMapDlg.h  Settings.cpp  Settings.h  SinglePlayer.cpp  SinglePlayer.h  VehicleStateReader.cpp  Widgets.cpp  Widgets.h  gui.cpp  gui.h
game/src/: CMakeLists.txt
game/tzodmain/: CMakeLists.txt  Main.cpp
game/video/: RenderBinding.cpp
game/workdir/: History.txt  Readme.txt  lang.cfg
src/app/: CMakeLists.txt  CombinedConfig.cpp
tzod/gc_tests/: CMakeLists.txt
(+1745 files in other folders)
